--- a/src/components/GameUI/GameUI.css
+++ b/src/components/GameUI/GameUI.css
@@ -6,7 +6,7 @@
 }
 
 .nav {
-  height: 50%;
+  height: 100%;
   width: 10%;
   padding: 10px;
   box-sizing: border-box;
@@ -21,8 +21,8 @@
 }
 
 .ui__tab {
-  height: 50%;
-  width: 50%;
+  height: 100%;
+  width: 40%;
 }
 
 .game-view {
@@ -32,7 +32,7 @@
 
 .game-board {
   width: 100%;
-  height: 85%;
+  height: 60%;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -56,7 +56,7 @@
 
 .game-controls {
   width: 100%;
-  height: 15%;
+  height: 10%;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -97,4 +97,16 @@
   height: 100%;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.game-ai-info {
+  width: 100%;
+  height: 30%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.game-ai-info__card{
+  width: 100%;
+  height: 100%;
 }
