--- a/src/components/GameUI/GameUI.css
+++ b/src/components/GameUI/GameUI.css
@@ -5,24 +5,12 @@
   flex-direction: row;
 }
 
-.nav {
-  height: 100%;
-  width: 10%;
-  padding: 10px;
-  box-sizing: border-box;
-}
-
 .nav__buttons {
   display: flex;
   flex-direction: column;
 
   width: 100%;
   height: 100%;
-}
-
-.ui__tab {
-  height: 100%;
-  width: 40%;
 }
 
 .game-view {
@@ -33,7 +21,7 @@
 .game-board {
   width: 100%;
   height: 60%;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
 }
 
@@ -57,7 +45,7 @@
 .game-controls {
   width: 100%;
   height: 10%;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
 }
 
@@ -75,10 +63,10 @@
 }
 
 .game-controls__btn {
-  background-color: greenyellow;
+  /* background-color: greenyellow; */
   color: black;
   height: 60%;
-  width: 25%;
+  min-width: 25%;
   margin: auto;
 }
 
@@ -88,25 +76,57 @@
   flex-direction: row;
 }
 
-.game-scores__label {
-  margin: auto;
-}
-
 .game-settings {
   width: 100%;
   height: 100%;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
 }
 
 .game-ai-info {
   width: 100%;
   height: 30%;
-  padding: 10px;
+  padding: 5px;
   box-sizing: border-box;
 }
 
 .game-ai-info__card{
   width: 100%;
   height: 100%;
+}
+
+ /* Cell phone */
+ @media only screen and (min-width: 0px) {
+  .ui__tab {
+    height: 100%;
+    width: 80%;
+  }
+  .nav {
+    height: 100%;
+    width: 20%;
+    padding: 5px;
+    box-sizing: border-box;
+  }
+  .text-label {
+    margin: auto;
+    font-size: 10px;
+  }
+}
+
+/* Laptop */
+@media only screen and (min-width: 992px) {
+  .ui__tab {
+    height: 100%;
+    width: 40%;
+  }
+  .nav {
+    height: 100%;
+    width: 12%;
+    padding: 5px;
+    box-sizing: border-box;
+  }
+  .text-label {
+    margin: auto;
+    font-size: 20px;
+  }
 }
